<resources>
    <string name="app_name">EventHelper</string>
    <string name="twoje_wydarzenie_to">Twoje wydarzenie to...</string>
    <string name="wesele">WESELE</string>
    <string name="i_komunia">I KOMUNIA</string>
    <string name="chrzest">CHRZEST</string>
    <string name="urodziny">URODZINY</string>
    <string name="spotkanie">SPOTKANIE</string>
    <string name="todo">TODO</string>
    <string name="wybierz_czas">Wybierz czas</string>
    <string name="wybierz_miejsce">Wybierz miejsce</string>
    <string name="zapisz">ZAPISZ</string>
    <string name="login">login</string>
    <string name="nazwa_uzytkownika">Nazwa użytkownika</string>
    <string name="haslo">Hasło</string>
    <string name="zaloguj">ZALOGUJ</string>
    <string name="nie_masz_konta_zarejestruj_si">Nie masz konta? </string>
    <string name="helloworld">Witaj w EventHelper!</string>
    <string name="nowy_user">Nazwa użytkownika</string>
    <string name="has_oo">Hasło</string>
    <string name="powitanie">To prostrze niz myslisz!</string>
    <string name="confirm_haslo">Potwierdź hasło</string>
    <string name="zarejestuj">Zarejestruj się!</string>
    <string name="has_o">Hasło</string>
    <string name="zarejestruj_si">zarejestruj się</string>
    <string name="czas">NIE MAMY CZASU</string>
    <string name="twoje_urodziny">Twoje urodziny!</string>
    <string name="sala_urodzinowa">SALA URODZINOWA</string>
    <string name="lista_go_ci">LISTA GOŚCI</string>
    <string name="prezent_urodzinowy">PREZENT URODZINOWY</string>
    <string name="najwa_niejszy_jest_tort">NAJWAŻNIEJSZY JEST TORT</string>
    <string name="twoje_wydatki">TWOJE WYDATKI</string>
    <string name="twoje_wesele">Twoje wesele!</string>
    <string name="kamerzysta">KAMERZYSTA</string>
    <string name="fotograf">FOTOGRAF</string>
    <string name="zespoł">ZESPÓŁ MUZYCZNY</string>
    <string name="pierscionki">PIERŚCIONKI</string>
    <string name="sala_weselna">SALA WESELNA</string>
    <string name="twoje_spotkanie">Twoje spotkanie!</string>
    <string name="sala">SALA NA SPOTKANIE</string>
    <string name="twoja_komunia">Twoja I komunia! </string>
    <string name="sala_komunia">SALA NA KOMUNIĘ</string>
    <string name="prezent_komunijny">PREZENT KOMUNIJNY</string>
    <string name="dekorator">DEKORATOR SALI</string>
    <string name="twoj_chrzest">Twój chrzest!</string>
    <string name="prezent_na_krzest">PREZENT NA CHRZEST</string>
    <string name="sala_CHRZEST">SALA NA CHRZEST</string>
    <string name="WYLOGUJ">WYLOGUJ SIĘ</string>
    <string name="email">E-mail</string>
    <string name="imie">Podaj imię</string>
    <string name="imiew">Imię</string>
    <string-array name="townlist">
        <item> Warszawa </item>
        <item> Gdańsk </item>
        <item> Lublin </item>
        <item> Rzeszów </item>
        <item> Białystok </item>
        <item> Łódź </item>
        <item> Katowice </item>
        <item> Zakopane </item>
        <item> Szczecin </item>
        <item> Opole </item>
        <item> Kraków </item>
        <item> Zamość </item>
        <item> Wrocław </item>
        <item> Poznań </item>

    </string-array>
    <string name="title_activity_list_guest_">ListGuest_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lista_go">Twoja lista gosci!</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="ok">OK</string>
    <string name="imi">Imię</string>
    <string name="dodaj_goscia">Dodaj goscia!</string>

</resources>