<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:fontFamily="cursive"
        android:paddingVertical="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/helloworld"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/blue"
        android:layout_marginTop="44dp"
        android:textSize="16sp"
        android:text="@string/nazwa_uzytkownika"
    />

    <EditText
        android:id="@+id/mailmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="3dp"
        android:autofillHints=""
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:text="@string/has_o" />


    <EditText
        android:id="@+id/pass_first2"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:hint="@string/haslo"
        android:inputType="textPassword"
        android:paddingHorizontal="2dp"
        android:paddingVertical="20dp" />

    <Button
        android:id="@+id/buttom_zaloguj"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/zaloguj"
        android:textColor="@color/white" />
<TextView
    android:layout_width="match_parent"
    android:layout_marginTop="1dp"
    android:layout_height="wrap_content"
    android:textColor="@color/blue"
    android:text="@string/nie_masz_konta_zarejestruj_si"
    android:layout_marginHorizontal="30dp"
    android:textAlignment="center">

</TextView>

    <Button
        android:id="@+id/buttom_zarejestruj_sie"
        android:layout_width="218dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="7dp"
        android:layout_marginTop="40dp"
        android:text="@string/zarejestruj_si"
        android:textColor="@color/white" />

</LinearLayout>