<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:fontFamily="cursive"
        android:paddingVertical="4dp"
        android:text="@string/dodaj_goscia"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/imie_list"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="3dp"
        android:hint="@string/imi"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/nazwisko_list"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="3dp"
        android:hint="@string/nazwisko"
        android:inputType="number"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_list"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="3dp"
        android:text="@string/ok" />


</LinearLayout>