<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="177dp"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:paddingVertical="4dp"
        android:text="@string/powitanie"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="italic" />


    <TextView
        android:layout_width="350dp"
        android:layout_height="33dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="3dp"
        android:text="@string/imie"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/imie_space"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="3dp"
        android:autofillHints=""
        android:hint="@string/imiew"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="4dp"
        android:text="@string/email"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/mailmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="0dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="4dp"
        android:text="@string/haslo"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/pass_first"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:hint="@string/haslo"
        android:inputType="textPassword"
        android:paddingHorizontal="2dp"
        android:paddingVertical="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="4dp"
        android:text="@string/confirm_haslo"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/confirmm_pass"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:hint="@string/confirm_haslo"
        android:inputType="textPassword"
        android:paddingHorizontal="2dp"
        android:paddingVertical="20dp" />

    <Button
        android:id="@+id/buttom_rejestracja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="4dp"
        android:paddingBottom="12dp"
        android:text="@string/zarejestuj"
        android:textColor="@color/white" />


</LinearLayout>