<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".InformationActivity">

    <TextView
            android:id="@+id/myDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="78dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/ustal_szczeg_y"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />


    <Button
        android:id="@+id/button_czas"
        android:layout_width="181dp"
        android:layout_height="71dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/wybierz_czas" />


    <Button
        android:id="@+id/button_miejsce"
        android:layout_width="181dp"
        android:layout_height="71dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="12dp"
        android:backgroundTintMode="add"
        android:text="@string/wybierz_miejsce" />

    <Button
        android:id="@+id/button_zapisz"
        android:layout_width="188dp"
        android:layout_height="66dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/zapisz" />
</RelativeLayout>
